--- a/index.html
+++ b/index.html
@@ -21,27 +21,34 @@
         Montoya
       </div>
     </div>
+    <div class="fecha">
+      <p>27 · DICIEMBRE · 2024</p>
+    </div>
     <div class="info">
       <div class="ceremony">
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" height="60px" viewBox="0 -960 960 960" width="60px" fill="#C9961A"><path d="M80-140v-210q0-17.9 9.5-32.45Q99-397 116-405l129-57v-94q0-17.49 9-31.56T278-610l172-88v-82h-50q-12.75 0-21.37-8.68-8.63-8.67-8.63-21.5 0-12.82 8.63-21.32 8.62-8.5 21.37-8.5h50v-50q0-12.75 8.68-21.38 8.67-8.62 21.5-8.62 12.82 0 21.32 8.62 8.5 8.63 8.5 21.38v50h50q12.75 0 21.38 8.68 8.62 8.67 8.62 21.5 0 12.82-8.62 21.32-8.63 8.5-21.38 8.5h-50v82l172 88q15 8.37 24 22.44 9 14.07 9 31.56v94l129 57q17 8 26.5 22.55T880-350v210q0 24.75-17.62 42.37Q844.75-80 820-80H590q-12.75 0-21.37-8.63Q560-97.25 560-110v-100q0-32-24-56t-56-24q-32 0-56 24t-24 56v100q0 12.75-8.62 21.37Q382.75-80 370-80H140q-24.75 0-42.37-17.63Q80-115.25 80-140Zm400.06-285Q503-425 519-441.06q16-16.06 16-39T518.94-519q-16.06-16-39-16T441-518.94q-16 16.06-16 39T441.06-441q16.06 16 39 16Z"/></svg>
+        </div>
         <h3>Ceremonia</h3>
-        <p>12:00 p.m.</p>
-        <p>Parroquia de Nuestra Señora de Guadalupe</p>
+        <p>12:00 P.M.</p>
+        <p>Parroquia de Nuestra Señora<br>de Guadalupe</p>
         <p>Paseo Lic. Adolfo López Mateos 437, Ángel Flores, Guasave, Sin.</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3599.2524344633603!2d-108.4737293237747!3d25.563267077477047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86bbbf8823c163f1%3A0xc706d2d5d90e6b9d!2sParroquia%20de%20Nuestra%20Se%C3%B1ora%20de%20Guadalupe!5e0!3m2!1ses-419!2smx!4v1732418954946!5m2!1ses-419!2smx" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <div class="divider"></div>
       <div class="reception">
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" height="60px" viewBox="0 0 24 24" width="60px" fill="#C9961A"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M12.68 5.88c.7-.24 1.22-.9 1.3-1.64.05-.47-.05-.91-.28-1.27L12.42.75c-.19-.33-.67-.33-.87 0l-1.28 2.22c-.17.3-.27.65-.27 1.03 0 1.32 1.3 2.35 2.68 1.88zm3.85 10.04l-1-1-1.08 1.07c-1.3 1.3-3.58 1.31-4.89 0l-1.07-1.07-1.09 1.07C6.75 16.64 5.88 17 4.96 17c-.73 0-1.4-.23-1.96-.61V20c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-3.61c-.75.51-1.71.75-2.74.52-.66-.14-1.25-.51-1.73-.99zM18 9h-5V8c0-.55-.45-1-1-1s-1 .45-1 1v1H6c-1.66 0-3 1.34-3 3v1.46c0 .85.5 1.67 1.31 1.94.73.24 1.52.06 2.03-.46l2.14-2.13 2.13 2.13c.76.76 2.01.76 2.77 0l2.14-2.13 2.13 2.13c.43.43 1.03.63 1.65.55.99-.13 1.69-1.06 1.69-2.06v-1.42C21 10.34 19.66 9 18 9z"/></svg>  
+        </div>
         <h3>Recepción</h3>
-        <p>2:00 p.m.</p>
-        <p>Salón de Eventos JE&CA'S</p>
+        <p>2:00 P.M.</p>
+        <p>Salón de Eventos JE&CA'S<br>Terraza</p>
         <p>Carret. a León Fonseca, Ladrilleras de Ocorio, Guasave, Sin.</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4404.279676548491!2d-108.4517217540746!3d25.60124958558957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86bbc13d06a30381%3A0x550bb9b9a08655fd!2zSkUmQ0HigJlT!5e0!3m2!1ses-419!2smx!4v1732419019795!5m2!1ses-419!2smx" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
-    <div class="footer">
-      <p>Diciembre</p>
-      <p class="date">27</p>
-      <p>Viernes</p>
+    <div class="regalo">
+      <p>Regalo sugerido</p>
+      <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#C9961A"><path d="M194-214q-32.73 0-55.36-22.64Q116-259.27 116-292v-376q0-32.72 22.64-55.36Q161.27-746 194-746h572q33.42 0 55.71 22.64T844-668v376q0 32.73-22.29 55.36Q799.42-214 766-214H194Zm604-431L501-468q-4.77 3-9.62 5-4.86 2-11.38 2-7 0-10.87-2-3.88-2-9.05-4.7L162-645v353q0 14 9 23t23 9h572q14 0 23-9t9-23v-353ZM480-517l309-183H172l308 183ZM162-657.9v4.99-34.44 1.35-14 13.95-3.45 36.68-5V-260v-397.9Z"/></svg>
     </div>
     <p class="rsvp">Favor de confirmar su asistencia</p>
   </div>
