--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
   <div class="invitation">
     <img class="cruz" src="./assets/Cruz.svg" alt="cruz">
-    <div class="title">
-      <p>Acompañanos a celebrar</p>
-      <p>el bautizo de nuestra hija</p>
+    <div class="titulo">
+      <p>Acompañanos a celebrar<br>el bautizo de nuestra hija</p>
     </div>
     <div class="nombre">
       <div>
