--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Invitación al Bautizo</title>
+  <title>Bautizo ✟ Briana</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="shortcut icon" href="/favicon.ico">
 </head>
 <body>
   <div class="invitation">
