--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bautizo ✟ Briana</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="shortcut icon" href="/logo.ico">
+  <link rel="shortcut icon" href="./assets/logo.ico">
 </head>
 <body>
   <div class="invitation">
