--- a/index.html
+++ b/index.html
@@ -47,10 +47,14 @@
       </div>
     </div>
     <div class="regalo">
-      <p>Regalo sugerido</p>
-      <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#C9961A"><path d="M194-214q-32.73 0-55.36-22.64Q116-259.27 116-292v-376q0-32.72 22.64-55.36Q161.27-746 194-746h572q33.42 0 55.71 22.64T844-668v376q0 32.73-22.29 55.36Q799.42-214 766-214H194Zm604-431L501-468q-4.77 3-9.62 5-4.86 2-11.38 2-7 0-10.87-2-3.88-2-9.05-4.7L162-645v353q0 14 9 23t23 9h572q14 0 23-9t9-23v-353ZM480-517l309-183H172l308 183ZM162-657.9v4.99-34.44 1.35-14 13.95-3.45 36.68-5V-260v-397.9Z"/></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" height="60" width="60" viewBox="0 0 512 512"><path fill="#C9961A" d="M190.5 68.8L225.3 128l-1.3 0-72 0c-22.1 0-40-17.9-40-40s17.9-40 40-40l2.2 0c14.9 0 28.8 7.9 36.3 20.8zM64 88c0 14.4 3.5 28 9.6 40L32 128c-17.7 0-32 14.3-32 32l0 64c0 17.7 14.3 32 32 32l448 0c17.7 0 32-14.3 32-32l0-64c0-17.7-14.3-32-32-32l-41.6 0c6.1-12 9.6-25.6 9.6-40c0-48.6-39.4-88-88-88l-2.2 0c-31.9 0-61.5 16.9-77.7 44.4L256 85.5l-24.1-41C215.7 16.9 186.1 0 154.2 0L152 0C103.4 0 64 39.4 64 88zm336 0c0 22.1-17.9 40-40 40l-72 0-1.3 0 34.8-59.2C329.1 55.9 342.9 48 357.8 48l2.2 0c22.1 0 40 17.9 40 40zM32 288l0 176c0 26.5 21.5 48 48 48l144 0 0-224L32 288zM288 512l144 0c26.5 0 48-21.5 48-48l0-176-192 0 0 224z"/></svg>
+      <h3>Regalo sugerido</h3>
+      <p>Efectivo</p>
     </div>
-    <p class="rsvp">Favor de confirmar su asistencia</p>
+    <div class="rsvp">
+      <svg xmlns="http://www.w3.org/2000/svg" height="60" width="56" viewBox="0 0 448 512"><path fill="#C9961A" d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 40L64 64C28.7 64 0 92.7 0 128l0 16 0 48L0 448c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-256 0-48 0-16c0-35.3-28.7-64-64-64l-40 0 0-40c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 40L152 64l0-40zM48 192l352 0 0 256c0 8.8-7.2 16-16 16L64 464c-8.8 0-16-7.2-16-16l0-256z"/></svg>
+      <h3>Favor de confirmar su asistencia</h3>
+    </div>
   </div>
 </body>
 </html>
