--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Bautizo ✟ Briana</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="./assets/logo.ico">
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.0.0/dist/supabase.js"></script> <!-- Incluye el cliente de Supabase -->
+  <script src="index.js" type="module"></script> 
 </head>
 <body>
   <div class="invitation">
@@ -54,6 +56,12 @@
     <div class="rsvp">
       <svg xmlns="http://www.w3.org/2000/svg" height="60" width="56" viewBox="0 0 448 512"><path fill="#C9961A" d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 40L64 64C28.7 64 0 92.7 0 128l0 16 0 48L0 448c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-256 0-48 0-16c0-35.3-28.7-64-64-64l-40 0 0-40c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 40L152 64l0-40zM48 192l352 0 0 256c0 8.8-7.2 16-16 16L64 464c-8.8 0-16-7.2-16-16l0-256z"/></svg>
       <h3>Favor de confirmar su asistencia</h3>
+      <div>
+        <h1>Seleccionar un Invitado</h1>
+        <select id="invitados-dropdown">
+          <option value="">Selecciona un invitado</option>
+        </select>
+      </div>
     </div>
   </div>
 </body>
