--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Bautizo ✟ Briana</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="./assets/logo.ico">
-  <script src="/index.js" type="module"></script> 
+  <script src="index.js"></script> 
 </head>
 <body>
   <div class="invitation">
