--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
               </div>
             </div>
-            <p>Por favor, confirma tu asistencia antes del [fecha].<br>¡Te esperamos con mucha ilusión!</p>
+            <p>Por favor, confirma tu asistencia antes del 20 de diciembre.<br>¡Te esperamos con mucha ilusión!</p>
             <div class="confirmados">
               <div>
                 <div class="titulo-adultos-confirmados">
