--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="invitation">
     <img class="cruz" src="./assets/Cruz.svg" alt="cruz">
     <div class="titulo">
-      <p>Acompañanos a celebrar<br>el bautizo de nuestra hija</p>
+      <p>Acompañanos a celebrar el bautizo de nuestra hija</p>
     </div>
     <div class="nombre">
       <div>
