--- a/Invitados/index.html
+++ b/Invitados/index.html
@@ -21,6 +21,7 @@
       <button data-filter="not-responded">No respondieron</button>
       <button data-filter="attending">Asistirán</button>
       <button data-filter="not-attending">No asistirán</button>
+      <button id="exportar-excel">Exportar a Excel</button>
     </div>
     <form id="invitado-form">
       <input type="hidden" id="id" name="id">
@@ -36,7 +37,16 @@
         <label for="ninios">Niños/Bebés:</label>
         <input type="number" id="ninios" name="ninios" min="0" required>
       </div>
+      <div>
+        <label for="adultosConfirmados">Adultos Confirmados:</label>
+        <input type="number" id="adultosConfirmados" name="adultosConfirmados" min="0" required>
+      </div>
+      <div>
+        <label for="niniosConfirmados">Niños/Bebés Confirmados:</label>
+        <input type="number" id="niniosConfirmados" name="niniosConfirmados" min="0" required>
+      </div>
       <button type="submit">Guardar</button>
+      <button type="reset" id="limpiar-formulario">Limpiar</button>
     </form>
     <table>
       <thead>
@@ -70,5 +80,6 @@
     </table>
   </div>  
   <script src="crud.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.4/xlsx.full.min.js"></script>
 </body>
 </html>
